# Project-3_Data-Aggregation-Grouping-Reshaping-Analysis

./: LICENSE  README.md  electricity_con.csv  electricity_gen.csv  filtered_electricity_con.csv  filtered_electricity_gen.csv  merged_electricity_data.csv  proposal.ipynb  pyproject.toml
src/Energy_Analysis/: __main__.py  part_1_summary.py  part_2_restructure.py  part_3_EDA.py  part_4_Inference.py  predict.py
src/analysis/: __init__.py  part_1_summary.py  part_2_restructure.py  part_3_EDA.py  part_4_Inference.py
