[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "Energy_Analysis"
authors = [
    {name = "Wei Lo"}
]
maintainers = [
    {name = "Wei Lo"},
]
description = "Sustainable Energy Transition: A Comprehensive Analysis of U.S. Electricity Consumption and Generation Patterns (2003-2023)"
readme = "README.md"
keywords = ["data visualization", "Energy", "Analytics Programming"]
license = {text = "MIT License"}
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.3",
    "numpy>=1.20",
    "pandas>=1.4",
    "seaborn>=0.13.0"
]
version = "1.0"


[tool.setuptools.packages.find]
where = ["src"]